--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                     <a href="https://www.envicool.net/" target="_blank" rel="noopener noreferrer" class="col-span-1 max-h-12 w-full flex items-center justify-center object-contain grayscale opacity-75 hover:grayscale-0 hover:opacity-100 transition">
                         <img class="max-h-12 w-full object-contain" src="https://placehold.co/200x80/CCCCCC/888888?text=Envicool" alt="Envicool">
                     </a>
-                    <a href="https://www.kstar.com/" target="_blank" rel="noopener noreferrer" class="col-span-1 max-h-12 w-full flex items-center justify-center object-contain grayscale opacity-75 hover:grayscale-0 hover:opacity-100 transition">
-                        <img class="max-h-12 w-full object-contain" src="https://placehold.co/200x80/CCCCCC/888888?text=Kstar" alt="Kstar">
+                    <a href="http://en.kedanm.com/" target="_blank" rel="noopener noreferrer" class="col-span-1 max-h-12 w-full flex items-center justify-center object-contain grayscale opacity-75 hover:grayscale-0 hover:opacity-100 transition">
+                        <img class="max-h-12 w-full object-contain" src="https://placehold.co/200x80/CCCCCC/888888?text=keda" alt="keda">
                     </a>
                     <a href="https://dcdeeptech.com/" target="_blank" rel="noopener noreferrer" class="col-span-1 max-h-12 w-full flex items-center justify-center object-contain grayscale opacity-75 hover:grayscale-0 hover:opacity-100 transition">
                         <img class="max-h-12 w-full object-contain" src="https://placehold.co/200x80/CCCCCC/888888?text=dcdeeptech" alt="dcdeeptech">
@@ -403,7 +403,7 @@
                             <li><a href="https://www.szhdcg.com/" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">HDCG</a></li>
                             <li><a href="https://www.xfusion.com/en/product/heterogeneous-server" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">Xfusion</a></li>
                             <li><a href="https://www.envicool.net/" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">Envicool</a></li>
-                            <li><a href="https://www.kstar.com/" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">Kstar</a></li>
+                            <li><a href="http://en.kedanm.com//" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">Keda</a></li>
                             <li><a href="https://dcdeeptech.com/" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">dcdeeptech</a></li>
                             <li><a href="https://www.opencompute.org/" target="_blank" rel="noopener noreferrer" class="text-sm leading-6 text-gray-300 hover:text-white">OCP</a></li>
                         </ul>
